k8s/overlays/prod/argoCD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-server-ingress
  namespace: argocd

spec:
  ingressClassName: traefik

  rules:
    - host: argocd.cluster.stringtecnologiadf.org

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: argocd-server
                port:
                  number: 80
